--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "art-template-loader": "^1.4.3",
     "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.3",
-    "exports-loader": "^0.7.0",
     "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.9",
+    "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.1",
@@ -36,5 +38,8 @@
     "webpack-dev-server": "^2.11.2",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.1"
+  },
+  "dependencies": {
+    "art-template": "^4.13.1"
   }
 }
