--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --colors --config config/webpack.dev.js",
-    "build": "webpack --progress --colors --config config/webpack.prod.js"
+    "build": "webpack --progress --colors --config config/webpack.prod.js",
+    "test": "webpack --progress --colors --config config/webpack.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,8 +27,8 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.1",
-    "less-loader": "^4.0.5",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "postcss-loader": "^2.1.0",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
