--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.10.0",
     "postcss-loader": "^2.1.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
