--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "dependencies": {
     "art-template": "^4.13.1",
+    "video.js": "^7.4.1",
+    "videojs-contrib-hls": "^5.15.0",
     "xlsx": "^0.14.1"
   }
 }
