--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "css-loader": "^0.28.9",
     "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "highlight.js": "^9.13.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.8.1",
@@ -34,6 +35,7 @@
     "node-sass": "^4.10.0",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^7.1.0",
+    "showdown": "^1.9.0",
     "style-loader": "^0.20.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
